--- a/filmoff/package.json
+++ b/filmoff/package.json
@@ -43,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.14",
     "css-loader": "^6.7.3",
     "postcss": "^8.4.23",
