add firebase + rework differ components -> complete work!

--- a/filmoff/package.json
+++ b/filmoff/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.4",
+    "@types/react-star-ratings": "^2.3.0",
     "axios": "^1.4.0",
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
